applier/build/5pi-home.jsonnet.test-args/media/sonarr/deployment.yaml
"apiVersion": "apps/v1"
"kind": "Deployment"
"metadata":
  "name": "sonarr"
  "namespace": "media"
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "name": "sonarr"
  "template":
    "metadata":
      "labels":
        "name": "sonarr"
    "spec":
      "containers":
      - "image": "fish/sonarr@sha256:66dfdb71890123758b154f922825288b272531be759d27f5ca2860a9cebdd2b8"
        "name": "sonarr"
        "volumeMounts":
        - "mountPath": "/data"
          "name": "sonarr"
        - "mountPath": "/media"
          "name": "media"
      "volumes":
      - "name": "sonarr"
        "persistentVolumeClaim":
          "claimName": "sonarr"
      - "hostPath":
          "path": "/pool-mirror/media"
        "name": "media"
