applier/build/5pi-home.jsonnet.test-args/media/sonarr/service.yaml
"apiVersion": "v1"
"kind": "Service"
"metadata":
  "name": "sonarr"
  "namespace": "media"
"spec":
  "ports":
  - "name": "http"
    "port": 8989
    "targetPort": 8989
  "selector":
    "name": "sonarr"
